--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
 
     <title>Frontend Mentor | NFT preview card component</title>
   </head>
-  <body>
+  <body class="page">
     <main class="content">
       <article class="card">
-        <img
-          class="card__image"
-          src="images/image-equilibrium.jpg"
-          alt="Glass cube balancing on a corner"
-        />
+        <div class="card__image-container">
+          <img
+            src="images/image-equilibrium.jpg"
+            alt="Glass cube balancing on a corner"
+          />
+        </div>
         <div class="card__content">
-          <h1>Equilibrium #3429</h1>
+          <h1><a class="link" href="#">Equilibrium #3429</a></h1>
           <p>Our Equilibrium collection promotes balance and calm.</p>
         </div>
         <div class="info-container">
@@ -72,7 +73,17 @@
           </span>
         </div>
         <hr class="hruler" />
-        <span> Creation of Jules Wyvern </span>
+        <span class="creator-info">
+          <img
+            src="images/image-avatar.png"
+            class="creator-info__avatar"
+            alt=""
+          />
+          <span class="creator-info__content"
+            ><span>Creation of</span>
+            <a class="link" rel="author" href="#">Jules Wyvern</a></span
+          >
+        </span>
       </article>
     </main>
   </body>
