--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta
+      name="description"
+      content="Frontendmentor challenge https://www.frontendmentor.io?ref=challenge by Sascha Khbabez"
+    />
     <link
       rel="icon"
       type="image/png"
@@ -12,16 +15,15 @@
     />
     <link rel="stylesheet" href="styles.css" />
 
-    <title>Frontend Mentor | NFT preview card component</title>
+    <title>NFT preview card component | Frontend Mentor</title>
   </head>
   <body class="page">
     <main class="content">
       <article class="card">
         <div class="card__image-container">
-          <img
-            src="images/image-equilibrium.jpg"
-            alt="Glass cube balancing on a corner"
-          />
+          <a href="#">
+            <img src="images/image-equilibrium.jpg" alt="view full-size" />
+          </a>
         </div>
         <div class="card__content">
           <h1><a class="link" href="#">Equilibrium #3429</a></h1>
@@ -30,12 +32,14 @@
         <div class="info-container">
           <span class="info-container__item info-container__item--cyan"
             ><svg
+              role="img"
               width="11"
               height="18"
               viewBox="0 0 11 18"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
             >
+              <title>Price in Ethereum</title>
               <path
                 fill-rule="evenodd"
                 clip-rule="evenodd"
@@ -47,12 +51,14 @@
           </span>
           <span class="info-container__item info-container__item--blue"
             ><svg
+              role="img"
               width="16"
               height="16"
               viewBox="0 0 16 16"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
             >
+              <title>Auction timer</title>
               <rect
                 opacity="0.01"
                 x="16"
