fixed some issues with accessibility

--- a/index.html
+++ b/index.html
@@ -20,63 +20,34 @@
   <body class="page">
     <main class="content">
       <article class="card">
-        <div class="card__image-container">
-          <a href="#">
-            <img src="images/image-equilibrium.jpg" alt="view full-size" />
-          </a>
-        </div>
+        <a
+          href="#"
+          aria-label="Open Gallery for image"
+          class="card__image-container link"
+        >
+          <img
+            src="images/image-equilibrium.jpg"
+            alt="NFT artwork showing an illuminated geometric cube"
+          />
+        </a>
+
         <div class="card__content">
           <h1><a class="link" href="#">Equilibrium #3429</a></h1>
           <p>Our Equilibrium collection promotes balance and calm.</p>
         </div>
         <div class="info-container">
-          <span class="info-container__item info-container__item--cyan"
-            ><svg
-              role="img"
-              width="11"
-              height="18"
-              viewBox="0 0 11 18"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <title>Price in Ethereum</title>
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M5.5 0L10.9961 9.16875L5.5 12.4312L0 9.16875L5.5 0ZM11 10.2165L5.5 18L0 10.2165L5.5 13.479L11 10.2165Z"
-                fill="currentcolor"
-              />
-            </svg>
+          <data
+            value="0.041"
+            class="info-container__item info-container__item--cyan"
+            ><img src="/images/icon-ethereum.svg" alt="" />
             0.041 ETH
-          </span>
-          <span class="info-container__item info-container__item--blue"
-            ><svg
-              role="img"
-              width="16"
-              height="16"
-              viewBox="0 0 16 16"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <title>Auction timer</title>
-              <rect
-                opacity="0.01"
-                x="16"
-                y="16"
-                width="16"
-                height="16"
-                transform="rotate(180 16 16)"
-                fill="black"
-              />
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M1.33331 7.99999C1.33331 4.3181 4.31808 1.33333 7.99998 1.33333C9.76809 1.33333 11.4638 2.03571 12.714 3.28595C13.9643 4.53619 14.6666 6.23188 14.6666 7.99999C14.6666 11.6819 11.6819 14.6667 7.99998 14.6667C4.31808 14.6667 1.33331 11.6819 1.33331 7.99999ZM7.99998 8.66666H10.6666C11.0348 8.66666 11.3333 8.36818 11.3333 7.99999C11.3333 7.6318 11.0348 7.33333 10.6666 7.33333H8.66665V5.33333C8.66665 4.96514 8.36817 4.66666 7.99998 4.66666C7.63179 4.66666 7.33331 4.96514 7.33331 5.33333V7.99999C7.33331 8.36818 7.63179 8.66666 7.99998 8.66666Z"
-                fill="currentcolor"
-              />
-            </svg>
+          </data>
+          <time
+            datetime="P3D"
+            class="info-container__item info-container__item--blue"
+            ><img src="/images/icon-clock.svg" alt="" />
             3 days left
-          </span>
+          </time>
         </div>
         <hr class="hruler" />
         <span class="creator-info">
