fixed images for github

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
           <data
             value="0.041"
             class="info-container__item info-container__item--cyan"
-            ><img src="/images/icon-ethereum.svg" alt="" />
+            ><img src="images/icon-ethereum.svg" alt="" />
             0.041 ETH
           </data>
           <time
             datetime="P3D"
             class="info-container__item info-container__item--blue"
-            ><img src="/images/icon-clock.svg" alt="" />
+            ><img src="images/icon-clock.svg" alt="" />
             3 days left
           </time>
         </div>
